# arena-rosnav-3D

./: .gitignore  .rosinstall  .rosinstall.orig  CHANGELOG.md  README.md  _BASE_19008.rosinstall  _LOCAL_19008.rosinstall  _REMOTE_19008.rosinstall  arena-rosnav-3D_gui.py  git_info.txt  install_gazebo.md  install_gazebo.sh  requirements.txt  requrements.txt  setup.md  test.ipynb  warehouse.launch
arena_bringup/: CMakeLists.txt  package.xml
arena_bringup/launch/: launch_arena.py  map_scan.launch  plan_fsm_param.yaml  start_arena_gazebo.launch  start_arena_gazebo.launch.orig  start_arena_real2.launch  start_training.launch  tiago.launch  visualization_training.launch
arena_bringup/launch/launch_configs/: config2.yaml  example_config.yaml
arena_bringup/launch/sublaunch_real/: map-amcl.launch  rosnav.launch  startNav-real.launch  start_rto_real.launch  start_tb3_real.launch  start_youbot_real.launch
arena_bringup/launch/sublaunch_testing/: fake_localization.launch  gazebo_simulator.launch  intermediate_planner.launch  plan_manager.launch  robots.launch  sensor_sim.launch  task_generator.launch  tiago_robot.launch  timed_space_planner_fsm.launch
arena_bringup/launch/sublaunch_testing/move_base/: move_base_aio.launch  move_base_applr.launch  move_base_arena.launch  move_base_cadrl.launch  move_base_dragon.launch  move_base_dwa.launch  move_base_eband.launch  move_base_lflh.launch  move_base_mpc.launch  move_base_mpc_new.launch  move_base_rlca.launch  move_base_rosnav.launch  move_base_teb.launch  move_base_teb_new.launch  move_base_trail.launch
arena_bringup/launch/sublaunch_testing/robot_launch/: cob4.launch  cob4_robot.launch  tiago_robot.launch  youbot_robot.launch
arena_bringup/launch/sublaunch_testing/robot_params/: agv-ota_params.yaml  burger_params.yaml  cob4_params.yaml  dingo_params.yaml  jackal_params.yaml  navrep_pepper_params.yaml  pepper_params.yaml  ridgeback_params.yaml  rto-tlabs_params.yaml  rto_params.yaml  rto_tlabs_params.yaml  tiago_params.yaml  turtlebot3_burger_params.yaml  turtlebot3_waffle_pi_params.yaml  youbot_params.yaml
arena_bringup/launch/sublaunch_training/: fake_localization.launch  gazebo_simulator.launch  intermediate_planner.launch  plan_manager.launch  single_env_training.launch  timed_space_planner_fsm.launch
arena_bringup/rviz/: nav_LP.rviz  rto.rviz
simulator_setup/: CMakeLists.txt  package.xml
simulator_setup/maps/factory/: map.pgm
simulator_setup/maps/home/: home-room1-tb3.pgm  home-room1-tb3.yaml  home-room2-tb3.pgm  home-room2-tb3.yaml
simulator_setup/maps/hospital/: map.pgm  map.yaml
simulator_setup/maps/ignc/: ignc-robo-room-tb3.pgm  ignc-robo-room-tb3.yaml  lab-complete-eval-tb3.pgm  lab-complete-eval-tb3.yaml  lab-complete-new-rto.pgm  lab-complete-new-rto.yaml  lab-complete-new-tb3.pgm  lab-complete-new-tb3.yaml  lab-corridor-new-tb3.pgm  lab-corridor-new-tb3.yaml  lab-room1-youbot.pgm  lab-room1-youbot.yaml  map.pgm
simulator_setup/maps/ignc-lab-rto-laser/: ignc-corridor-rto.pgm  ignc-corridor-rto.yaml  ignc-lab.yaml  ignc-robo-room.pgm  ignc-robo-room.yaml  ignc-test3.pgm  ignc-test3.yaml
simulator_setup/maps/ignc_lab_corridor/: map.yaml
simulator_setup/maps/ignc_real/: map.pgm  map.yaml
simulator_setup/maps/map_ignc_lab/: map.pgm
simulator_setup/maps/map_small_warehouse/: map.pgm
simulator_setup/maps/map_warehouse/: map.yaml
simulator_setup/maps/outside/: map.pgm  map.yaml
simulator_setup/maps/test/map2/: map.pgm
simulator_setup/maps/turtlebot3_world/: map.yaml
simulator_setup/models/ignc/: model.config  model.sdf
simulator_setup/models/map2/: model.config  model.sdf
simulator_setup/models/map5/: model.config  model.sdf
simulator_setup/models/map7/: model.config  model.sdf
simulator_setup/obstacles/cuboid/: model.config  model.sdf
simulator_setup/obstacles/cylinder/: model.config  model.sdf
simulator_setup/obstacles/utils/: collision-actor-plugin
simulator_setup/robot/cob4/: base_configurations.yaml  cob4.urdf.xacro  display_robot.launch  scan_unifier.launch  upload_robot.launch
simulator_setup/robot/dingo/: control.yaml
simulator_setup/robot/jackal/: control.yaml
simulator_setup/robot/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
simulator_setup/scenarios/: aws_house-s2_10.json  aws_house-s2_5.json  aws_house-s3_10.json  aws_house-s3_5.json  aws_house.json  aws_house_10.json  aws_house_20.json  aws_house_5.json  aws_house_obs05.json  aws_house_obs10.json  aws_house_obs20.json  blocked_corridors.json  bookstore.json  ea  factory.json  factory_10.json  factory_20.json  factory_5.json  hospital.json  hospital_20.json  hospital_5.json  hospital_obs05.json  hospital_obs10.json  hospital_obs20.json  ignc_lab.json  ignc_obs05.json  ignc_obs10.json  ignc_real_obs05.json  ignc_real_obs10.json  map2_obs05.json  map2_obs10.json  map5_obs05.json  map5_obs10.json  map7_obs05.json  map7_obs10.json  map7_obs_05.json  map7_obs_10.json  only_robot.json  outside.json  outside_10.json  (+12 more)
simulator_setup/scenarios/eval/: icra_22.json
simulator_setup/scenarios/eval_3d/: outside_20.json  outside_5.json
simulator_setup/scenarios/ignc2/: ignc_real_obs05.json  ignc_real_obs10.json
simulator_setup/scenarios/ignc3/: ignc_real_obs05.json  ignc_real_obs10.json
simulator_setup/scenarios/ped_scenarios/: arena_generated.xml  bookstore.xml  dynamic_world.xml  experiment_room_2.xml  experiment_room_3.xml  experiment_room_4.xml  experiment_rooms.xml  factory.xml  hospital.xml  ignc_lab.xml  map1.xml  map2.xml  map3.xml  map5.xml  map7.xml  map9.xml  office_cpr_construction.xml  outside_test.xml  racetrack_obstacle.xml  small_warehouse.xml  small_warehouse_detailed.xml  turtlebot3_house.xml  turtlebot3_house_real.xml  turtlebot3_world.xml  walker_racecourse.xml
simulator_setup/scenarios/utils/: empty_ped_scenario.json
simulator_setup/worlds/: small_warehouse.world
simulator_setup/worlds/turtlebot3_house/: turtlebot3_house.world
utils/mass_launch/: CMakeLists.txt  launch_arena.py  listener_node.py  package.xml
utils/mass_launch/launch_configs/: config2.yaml
(+1168 files in other folders)
