<?xml version="1.0"?>
<package format="2">
  <name>simulator_setup</name>
  <version>0.0.0</version>
  <description>The simulator_setup package</description>
  <maintainer email="root@open.open">root</maintainer>
  <license>open</license>


  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>realtime_tools</depend>


  <exec_depend>interactive_marker_twist_server</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>libgazebo11-dev</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>lms1xx</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>pointgrey_camera_description</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
    <gazebo_ros plugin_path="${prefix}/worlds/aws_house/lib" gazebo_media_path="${prefix}/worlds/aws_house" gazebo_model_path="${prefix}/worlds/aws_house/models"/>
    <gazebo_ros plugin_path="${prefix}/worlds/turtlebot3_house/lib" gazebo_media_path="${prefix}/worlds/turtlebot3_house" gazebo_model_path="${prefix}/worlds/turtlebot3_house/models"/>
    <gazebo_ros plugin_path="${prefix}/worlds/small_warehouse/lib" gazebo_media_path="${prefix}/worlds/small_warehouse" gazebo_model_path="${prefix}/worlds/small_warehouse/models"/>
    <gazebo_ros plugin_path="${prefix}/worlds/factory/lib" gazebo_media_path="${prefix}/worlds/factory" gazebo_model_path="${prefix}/worlds/factory/models"/>
    <gazebo_ros plugin_path="${prefix}/worlds/bookstore/lib" gazebo_media_path="${prefix}/worlds/bookstore" gazebo_model_path="${prefix}/worlds/bookstore/models"/>
    <gazebo_ros plugin_path="${prefix}/worlds/hospital/lib" gazebo_media_path="${prefix}/worlds/hospital" gazebo_model_path="${prefix}/worlds/hospital/models"/>
    <gazebo_ros plugin_path="${prefix}/worlds/dynamic_world/lib" gazebo_media_path="${prefix}/worlds/dynamic_world" gazebo_model_path="${prefix}/worlds/dynamic_world/models"/>
    <gazebo_ros plugin_path="${prefix}/worlds/experiment_room_1/lib" gazebo_media_path="${prefix}/worlds/experiment_room_1" gazebo_model_path="${prefix}/worlds/experiment_room_1/models"/>
    <gazebo_ros plugin_path="${prefix}/worlds/experiment_room_2/lib" gazebo_media_path="${prefix}/worlds/experiment_room_2" gazebo_model_path="${prefix}/worlds/experiment_room_2/models"/>
    <gazebo_ros plugin_path="${prefix}/worlds/experiment_room_3/lib" gazebo_media_path="${prefix}/worlds/experiment_room_3" gazebo_model_path="${prefix}/worlds/experiment_room_3/models"/>
    <gazebo_ros plugin_path="${prefix}/worlds/experiment_room_4/lib" gazebo_media_path="${prefix}/worlds/experiment_room_4" gazebo_model_path="${prefix}/worlds/experiment_room_4/models"/>
    <gazebo_ros plugin_path="${prefix}//worlds/office_env_large/lib" gazebo_media_path="${prefix}/worlds/office_env_large/media/meshes" gazebo_model_path="${prefix}/worlds/office_env_large/models"/>
    <gazebo_ros plugin_path="${prefix}/worlds/small_city/lib" gazebo_media_path="${prefix}/worlds/small_city/media/meshes" gazebo_model_path="${prefix}/worlds/small_city/models"/>
    <gazebo_ros plugin_path="${prefix}/worlds/office_earthquake/lib" gazebo_media_path="${prefix}/worlds/office_earthquake/media/meshes" gazebo_model_path="${prefix}/worlds/office_earthquake/models"/>
    <gazebo_ros plugin_path="${prefix}/worlds/office_cpr_construction/lib" gazebo_media_path="${prefix}/worlds/office_cpr_construction/media/meshes" gazebo_model_path="${prefix}/worlds/office_cpr_construction/models"/>
    <gazebo_ros plugin_path="${prefix}/worlds/racetrack_obstacle/lib" gazebo_media_path="${prefix}/worlds/racetrack_obstacle/media/meshes" gazebo_model_path="${prefix}/worlds/racetrack_obstacle/models"/>
     <gazebo_ros plugin_path="${prefix}/worlds/walker_racecourse/lib" gazebo_media_path="${prefix}/worlds/walker_racecourse/media/meshes" gazebo_model_path="${prefix}/worlds/walker_racecourse/models"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <controller_interface plugin="${prefix}/robot/ridgeback/control/mecanum_drive_controller_plugins.xml"/>

  </export>
</package>
