<?xml version="1.0"?>
<package>
  <name>light_scan_sim</name>
  <version>0.1.0</version>
  <description>The light_scan_sim package simulates a laser scan originating from a TF against a costmap.</description>

  <maintainer email="josephgeek@gmail.com">Joseph Duchesne</maintainer>
  <author email="josephgeek@gmail.com">Joseph Duchesne</author>

  <license>MIT</license>

  <url type="website">https://github.com/josephduchesne/light_scan_sim</url>

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend>
  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>message_runtime</run_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <test_depend>gtest</test_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>rosunit</test_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend> 
  <build_depend>libopencv-dev</build_depend> 
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
