<?xml version="1.0"?>
<package>
  <name>barn_msgs</name>
  <version>1.1.3</version>
  <description>Barn Messages.</description>
  <maintainer email="xzt@to.do.com">XZT</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/zzuxzt</url>
  <author email="xzt@to.do.com">XZT</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
</package>
